; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_get_size_is_expr.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_get_size_is_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@EXPR_VOID = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [71 x i8] c"%s: multidimensional conformant arrays not supported at the top level\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @get_size_is_expr(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %5, align 8
  br label %6

6:                                                ; preds = %32, %2
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @is_array(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %35

10:                                               ; preds = %6
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @type_array_has_conformance(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %31

14:                                               ; preds = %10
  %15 = load i32*, i32** %3, align 8
  %16 = call %struct.TYPE_4__* @type_array_get_conformance(i32* %15)
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @EXPR_VOID, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %31

21:                                               ; preds = %14
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = icmp ne %struct.TYPE_4__* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %21
  %25 = load i32*, i32** %3, align 8
  %26 = call %struct.TYPE_4__* @type_array_get_conformance(i32* %25)
  store %struct.TYPE_4__* %26, %struct.TYPE_4__** %5, align 8
  br label %30

27:                                               ; preds = %21
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @error(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str, i64 0, i64 0), i8* %28)
  br label %30

30:                                               ; preds = %27, %24
  br label %31

31:                                               ; preds = %30, %14, %10
  br label %32

32:                                               ; preds = %31
  %33 = load i32*, i32** %3, align 8
  %34 = call i32* @type_array_get_element(i32* %33)
  store i32* %34, i32** %3, align 8
  br label %6

35:                                               ; preds = %6
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  ret %struct.TYPE_4__* %36
}

declare dso_local i64 @is_array(i32*) #1

declare dso_local i64 @type_array_has_conformance(i32*) #1

declare dso_local %struct.TYPE_4__* @type_array_get_conformance(i32*) #1

declare dso_local i32 @error(i8*, i8*) #1

declare dso_local i32* @type_array_get_element(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
